--- a/DevWeek.SeuCarroNaVitrine/DevWeek.SeuCarroNaVitrine.Negocio/packages.config
+++ b/DevWeek.SeuCarroNaVitrine/DevWeek.SeuCarroNaVitrine.Negocio/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="DapperExtensions" version="1.5.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="RavenDB.Client" version="3.5.1" targetFramework="net461" />
 </packages>
