--- a/DevWeek.SeuCarroNaVitrine/DevWeek.SeuCarroNaVitrine.Negocio/packages.config
+++ b/DevWeek.SeuCarroNaVitrine/DevWeek.SeuCarroNaVitrine.Negocio/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
-  <package id="DapperExtensions" version="1.5.0" targetFramework="net461" />
+  <package id="Dapper.Extension" version="1.0.0.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net461" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net461" />
+  <package id="NHibernate" version="4.1.1.4000" targetFramework="net461" />
   <package id="RavenDB.Client" version="3.5.1" targetFramework="net461" />
 </packages>
